--- a/files/六级.md
+++ b/files/六级.md
@@ -88,7 +88,8 @@
 
 ~~~
     When faced with differing opinions,we should try to reach agreement through friendly discussion and reasonable argument.From my perspective,friendly communication and reasonable argument are effective ways to resolve differences in teamwork tasks. It is important to learn to get along with others in friendly way,provided that people intend to achieve personal growth and success in the long run.
-    Living in an era of rapid economic development,people usually need through cooperate with others to achieve goals.As a matter of fact,being able to friendly and effectively communicate with others thus compelete mission 
+    Living in an era of rapid economic development,people usually need to work with others to accomplish their goals.As a matter of fact,being able to friendly and effectively cooperate with others are excellent inner qualities and demonstration of personal abilites.
+    As a matter of fact, being able to cooperate in a friendly and effective manner is an excellent inner quality and a demonstration of personal ability.
 ~~~
 
 *For this part,you are allowed 30 minutes to write an essay than begins with the sentence "It is widely accepted that an important goal of education is to help students learn how to learn." You can make comments,cite examples or use your personal experiences to develop your essay.You should write at least 150 words but not more than 200 words.*
