--- a/files/六级.md
+++ b/files/六级.md
@@ -136,7 +136,9 @@
 	Only when young people truly realize that knowing how to learn is more important than learning itself can they gain long-term benefits in both work and life. As a college student, I am convinced that it is of great necessity for students to attach importance to learning how to learn.
 ~~~
 
-2021年六月
+## 2021年12月（一）
+
+### 作文
 
 ![image-20250520151438187](./六级.assets/image-20250520151438187.png)
 
@@ -146,6 +148,8 @@
 	Only when young people truly learning to keep independent thinking when browsing Internet, can they gain real effective of knowledge for them.To conclude,when surfing the Internet, we should be alert and bear in mind that the Inernet is just a virtual world.
 ~~~
 
+### 翻译
+
 ![image-20250520164915330](./六级.assets/image-20250520164915330.png)
 
 ~~~
@@ -153,6 +157,117 @@
 ~~~
 
 ~~~
-	The site of the First National Congress of the Communist Party of China is located at No. 76 Xingye Road, Shanghai. It is a typical Shanghai-style residence, built in the autumn of 1920. On July 23, 1921, the First National Congress of the Communist Party of China was held here. The Congress adopted the Party’s first program and first resolution, elected the central leadership body, and declared the founding of the Communist Party of China.In September 1952, the site was restored and turned into a memorial museum open to the public. In addition to introducing the delegates who attended the First Congress, the museum also presents the historical development of the Party. It has now become a patriotic education base for learning about the history of the Party and paying tribute to revolutionary martyrs.
+	The site of the First National Congress of the Communist Party of China is located at No. 76 Xingye Road, Shanghai. It is a typical Shanghai-style residence, built in the autumn of 1920. On July 23, 1921, the First National Congress of the Communist Party of China was held here. At the meeting, the Party’s first program and resolution were adopted, the central leadership was elected, and the founding of the Party was declared. In September 1952, the site was restored and turned into a memorial museum open to the public. The museum not only introduces the delegates who attended the Congress, but also presents the Party’s historical development. Today, it has become a patriotic(爱国) education base for learning about the Party’s history and commemorating(纪念) revolutionary(革命) martyrs(烈士).
+~~~
+
+>be located at 位于...
+>
+>Communist Party of China 中国共产党
+>
+>Congress 国会、代表大会、议会
+>
+>National Congress of the Communist  Party of China 中国共产党全国代表大会
+>
+>adopt 采纳、接受、通过
+>
+>turn into 转变
+>
+>memorial museum 纪念馆
+>
+>delegates 代表
+
+### 阅读
+
+>regularly 规律地、定期地
+>
+>engage 聘用、聘请、参加
+>
+>candidate 候选人、求职者
+>
+>screening 筛选、检查
+>
+>tempting 诱人的、有诱惑力
+>
+>hiring 招聘
+>
+>incorporating 合并、纳入、结合
+>
+>inappropriately 不合适、不适当
+>
+>unethical 不道德的
+>
+>essentially 本质上
+>
+>scrutinizing 仔细检查、审查
+>
+>reveal 揭露
+>
+>ruin 毁灭、毁掉
+>
+>be lawfully considered 被合法考虑
+>
+>toxic 有毒的、有危害的
+>
+>stain 污染、玷污
+>
+>reputation 声誉
+>
+>delicate 精致的、微妙的、脆弱的、易碎的
+>
+>stipulate 规定
+>
+>supply 供应、补充、满足
+>
+>invasive 入侵
+>
+>moral 道德
+>
+>sensational 轰动的、夸张的
+>
+>complicate 复杂化
+>
+>detrimental 有害的、不利的
+>
+>magnified 放大、夸大
+>
+>legitimate 合法的
+>
+>navigate 导航、浏览
+>
+>comply 遵从、服从
+>
+>consulting 咨询
+>
+>accurate 准确的
+>
+>bolstering 支持、鼓励、增加
+>
+>transparency 透明度
+>
+>exactly 精确的、准确的
+>
+>articulating 清楚阐明
+>
+>emerging 新兴的
+>
+>misconceptions 误解
+>
+>opposite 相反
+>
+>eroding 侵蚀
+>
+>stigma 污名、耻辱
+>
+>supposition 推测
+
+## 2021年12月（二）
+
+### 作文
+
+![image-20250521150311779](./六级.assets/image-20250521150311779.png)
+
+~~~
+	Recently,the phenomenon that star chasing is prevalent among many teenagers has aroused wide concern.From my perspective,it is advisable for teenagers not to place importance on star chasing,provided that they intends to achieve personal growth and success in the long run.
+	Living in an era of advanced social media,teenagers being able to see the various of stars. 
 ~~~
 
