--- a/files/六级.md
+++ b/files/六级.md
@@ -157,7 +157,7 @@
 ~~~
 
 ~~~
-	The site of the First National Congress of the Communist Party of China is located at No. 76 Xingye Road, Shanghai. It is a typical Shanghai-style residence, built in the autumn of 1920. On July 23, 1921, the First National Congress of the Communist Party of China was held here. At the meeting, the Party’s first program and resolution were adopted, the central leadership was elected, and the founding of the Party was declared. In September 1952, the site was restored and turned into a memorial museum open to the public. The museum not only introduces the delegates who attended the Congress, but also presents the Party’s historical development. Today, it has become a patriotic(爱国) education base for learning about the Party’s history and commemorating(纪念) revolutionary(革命) martyrs(烈士).
+	The site of the First National Congress of the Communist Party of China is located at No. 76 Xingye Road, Shanghai. It is a typical Shanghai-style residence, built in the autumn of 1920. On July 23, 1921, the First National Congress of the Communist Party of China was held here. At the meeting, the Party’s first program and resolution were adopted, the central leadership was elected, and the founding of the Party was declared. In September 1952, the site was restored and turned into a memorial museum open to the public. The museum not only introduces the delegates who attended the Congress, but also presents the Party’s historical development. Today, it has become a patriotic(爱国主义) education base for learning about the Party’s history and commemorating(纪念) revolutionary(革命) martyrs(烈士).
 ~~~
 
 >be located at 位于...
@@ -270,4 +270,34 @@
 	Recently,the phenomenon that star chasing is prevalent among many teenagers has aroused wide concern.From my perspective,it is advisable for teenagers not to place importance on star chasing,provided that they intends to achieve personal growth and success in the long run.
 	Living in an era of advanced social media,teenagers being able to see the various of stars. 
 ~~~
+
+### 翻译
+
+![image-20250521215312681](./六级.assets/image-20250521215312681.png)
+
+```
+	Yanan is located at the north of Shanxi province,middle in yellow river,it is an area of chinese revolutionary.Zedong Mao and other revolutionist was living and fighting in here thirteen years.The War of Resistance Against Japanese Aggression and war of liberation was led by them，the spirit of Yanan was cultivated and made a great contribuation for chinese revolutionary.A site of Yanan is the largest quantity,the most wide distribute and the most hight grade.Yanan is patriotic(爱国主义) ,traditional of revolutionnary and the spirit of Yanan education base.Yanan has 9 revolutionnary of memoral museum,it store's many zhonggonggongyang and revolutionist goods in Yanan,thus has "chinese revoluationary museum city" title.
+```
+
+```
+	Yan'an is located at the northern part of Shaanxi Province, situated in the middle reaches of the Yellow River. It is a sacred place of the Chinese revolution. Mao Zedong and other revolutionary leaders lived and fought here for thirteen years. They led the War of Resistance Against Japanese Aggression and the War of Liberation, cultivated the "Yan'an Spirit", and contributed greadtly to the Chinese revolution. The old revolutionary sites in Yan'an are the largest in number, most widely distributed and ranks the highest level in China. It is a national education base for patriotism, revolutionary traditions, and the Yan'an Spirit. Yan'an has nine revolutionary memorial halls, which collect a large number of important items left by the Central Committee of Commmunist Party of China and the old generation of revolutionists during the Yan'an period. Therefore, it enjoys the repution of "the City of Chinese Revolution Museums."
+```
+
+>the northern part of 北部
+>
+>situated in 地处...
+>
+>sacred place 圣地
+>
+>the War of Resistance Against Japanese Aggression  抗日战争
+>
+>the War of Liberation 解放战争
+>
+>the largest in number 数量最大
+>
+>enjoys the repution of 享有美誉
+>
+>Patriotism 爱国主义
+>
+>memorial halls 纪念馆
 
