--- a/files/六级.md
+++ b/files/六级.md
@@ -273,7 +273,7 @@
 
 ### 翻译
 
-![image-20250521215312681](./六级.assets/image-20250521215312681.png)
+![image-20250522091710286](./六级.assets/image-20250522091710286.png)
 
 ```
 	Yanan is located at the north of Shanxi province,middle in yellow river,it is an area of chinese revolutionary.Zedong Mao and other revolutionist was living and fighting in here thirteen years.The War of Resistance Against Japanese Aggression and war of liberation was led by them，the spirit of Yanan was cultivated and made a great contribuation for chinese revolutionary.A site of Yanan is the largest quantity,the most wide distribute and the most hight grade.Yanan is patriotic(爱国主义) ,traditional of revolutionnary and the spirit of Yanan education base.Yanan has 9 revolutionnary of memoral museum,it store's many zhonggonggongyang and revolutionist goods in Yanan,thus has "chinese revoluationary museum city" title.
@@ -301,3 +301,100 @@
 >
 >memorial halls 纪念馆
 
+### 阅读
+
+>rationality 理性
+>
+>enlightenment 启蒙运动
+>
+>endangered 濒临灭绝
+>
+>the advent of ...的出现
+>
+>discourse 话语，论述，交谈
+>
+>exposition 解释，阐述；展览会;探讨
+>
+>pleasure 快乐，满足
+>
+>uncoverlies 揭露
+>
+>overgenalizations 以偏概全
+>
+>abuse 滥用、虐待
+>
+>assertion 断言
+>
+>generalization 概括
+>
+>dominance 主导地位
+>
+>fundamentally 从根本上说
+>
+>religion 宗教
+>
+>sensationalism 耸人听闻
+>
+>proposition 观点，主张
+>
+>commercial 商业
+>
+>intellectual 知识分子
+>
+>colonized 殖民
+>
+>refocuse 重新聚集
+>
+>engage 从事，聘请，聘用
+>
+>celebrities 名人
+>
+>approval 赞同
+>
+>render 使成为
+>
+>proportion
+>
+>workforce
+>
+>dysfunction 功能失效
+>
+>employer 雇主
+>
+>employee 员工
+>
+>entitlement
+>
+>workplace 职场
+
+## 2021年12月（一）
+
+### 作文
+
+![image-20250522102852245](./六级.assets/image-20250522102852245.png)
+
+### 翻译
+
+![image-20250522142658723](./六级.assets/image-20250522142658723.png)
+
+~~~
+	Jing'gang'shan is located at the junction of Hunan province and Jiangxi province.It is enjoys repution of "chinese's red revoluation crade" because it great revolution history.On October 1927,Zedong Mao, De Zhu and other revolutionary leaders led Chinese worker and farmer red army came to here.They started hardly fighting,created the first place of countryside revoluation,set the fire of chinese revolution and adopted the revolution road of "countryside besiege city,army gain power",which has chinese special.Chinese revoluation step to victory from here.Jing'Gang'Shan has 100 numbers sites of revolution,it became a "no wall's revolution historical museum ".It is a important education base for patriotism and revolution traditional education.
+~~~
+
+~~~
+	Jinggangshan is located at the junction of Hunan and Jiangxi provinces. It is known as the "cradle of the Chinese revolution" because of its glorious revolutionary history.In October 1927, Mao Zedong, Zhu De, and other revolutionary leaders led the Chinese Workers' and Peasants' Red Army to this area, where they launched a hard and extraordinary struggle.They established the first rural revolutionary base, ignited the spark of the Chinese revolution, and pioneered a revolutionary path with Chinese characteristics—encircling the cities from the countryside and seizing power through armed struggle. From here, the Chinese revolution moved toward victory.With more than 100 revolutionary sites,Jinggang Mountain has now become a "revolutionary history museum without walls" as well as an important education base for patriotism and revolutionary traditions.
+~~~
+
+>is known as 被誉为
+>
+>cradle 摇篮
+>
+>peasant 农民
+>
+>extraordinary 非凡的
+
+### 阅读
+
+>
+>
+>
