--- a/files/六级.md
+++ b/files/六级.md
@@ -136,6 +136,90 @@
 	Only when young people truly realize that knowing how to learn is more important than learning itself can they gain long-term benefits in both work and life. As a college student, I am convinced that it is of great necessity for students to attach importance to learning how to learn.
 ~~~
 
+## 六级翻译
+
+### 修饰后置
+
+#### 介词短语
+
+> 简单的修饰和时间、地点用介词短语修饰。
+
+**过中秋节的习俗于唐代早期在中国各地开始流行。**
+**The custom of celebrating/spending Mid-Autumn festival became popular throughout China in the early Tang dynasty.**
+
+**另一个则是乡村生活的种种乐趣，画有渔夫在湖上打渔，农夫在山上砍柴采药，或是书生坐在松树下吟诗作画。**
+**The other is various recreations of rural life：fishermen fish on the lake;farmers cut firewood or collect herbs on the hills,or scholars compose poems or paint under pine trees.**
+
+#### 定语从句
+
+> 当修饰中包含动词时使用定语从句，定语从句包括限制性定语从句和非限制性定语从句。
+>
+> 限制性定语从句主要修饰的是人或物。
+
+**对于那些<u>月薪较低却渴望在大城市拥有一套属于自己的体面、舒适的栖身之所</u>的人来说，高昂的房价是<u>他们无法承受</u>的负担。**
+
+划横线的部分是句子中带动词的修饰成分，都需要采用定语从句。
+**For those people <u>who earn less but eager to own a decent and comfortable place of their own in a big city</u>,the high housing price is a heavy burden that <u>they cannot afford</u>.**
+
+> 非限制性定语从句修饰的是事。
+>
+> 非限制性定语从句的运用很广泛，最常用的是：当题目中出现“这，该，其”这样的字眼，指代前面说的那件事情，我们就要想到用非限制性定语从句。
+
+**大学生之间的竞争也越来越激烈，<u>这导致任何一名大学生找到工作的机会都变小了</u>。**
+划线部分就用非限制性定语从句
+**The competition among graduates has become more and more fierce,which results in the fact that the chance that any individual graduate finds a job has decreased.**
+
+**中国人自古以来就在中秋时节庆祝丰收，<u>这与北美地区庆祝感恩节的习俗十分相似</u>。**
+**Since ancient times,the Chinese people usually celebrate harvest in the Mid-Autumn,which is similar to the custom of celebrating Thanksgiving in the North America.**
+
+#### 同位语
+
+> 插入语一般作为一种形式，是同位语的一种，同位语的作用是解释说明名词的。也就是说，我们一般可以用插入语的形式解释说明名词。
+
+**旅游业是最近二十年来在世界各地迅速发展的一个行业，现在正引起中国公众越来越大的注意。**
+**Tourism,a fast developing industry for the last two decades all over the world,now draws more and more attention of Chinese public.**
+
+### 多动句
+
+> 所谓多动句，就是一个句子中出现多个动词。汉语中不存在所谓谓语动词和非谓语动词，而英语中是有明显区分的，并且一个句子有且只有一个谓语动词。正常来说，有三种方式，分别是连词and；非谓语动词；以及其他连词。
+>
+> 绝大多数的多动句都是使用非谓语动词的方式来处理多动句。哪个动词离主语近，哪个就处理成谓语动词，其他动词全部处理成非谓语动词。把靠近主语最近的那个动词作为谓语动词，其他部分作为非谓语动词即可，要注意主动的处理成现在分词-ing，被动要处理成过去分词-ed，表示目的的，处理成动词不定式to do。
+
+**政府已设定目标减少污染，提高能源效率，改善得到教育和医保的机会，并扩大社会保障。**
+**The government has set goals to reduce pollution,enhance energy efficiency,improve opportunities to get education and medical insurance,and expand the social security.**
+
+**鉴于这一状况，政府近来采取了一系列的措施来防止房价过快增长，包括提高利率及增加房产税等。**
+**For this reason，the government has taken a series of measures to prevent the housing price from raising too fast,including raising interest rates and increasing taxes on real estate etc.**
+
+### 无主句
+
+> 在英语中，句子中必须要有主语，所以我们的处理方式一般是使用“变被动”
+
+**至今已有约120个中文词加进了牛津英语词典，成了英语语言的一部分。**
+**So far,about 120 Chinese words have been added to Oxford English Dictionary,becoming a part of the English language.**
+
+**另有850亿元用于新建或升级城市垃圾处理和污水（sewage）处理设施，加上300亿元投资未来三年的植树造林（forestation）**
+**Another 85 billion yuan will be used to build or upgrade the facilities for treatment of urban garbage and sewage and additional 30 billion yuan will be invested in forestation in the next three years.**
+
+> 当主语不是人，且句子中出现“有，存在”等这样的字眼，我们就用there be句式
+
+**宴席通常至少有一道汤，可以最先或最后上桌。**
+**There usually is at least one soup in the feast,which can be served at the beginning or at last.**
+
+**中国地方戏种类很多，其中京剧（Peking Opera）是一个具有代表性的剧种。**
+**There are many kinds of local operas in China,one of which is Peking Opera,a representative one.**
+
+### 时态
+
+| 时间         | 一般时    | 进行时          | 完成时          | 完成进行时            |
+| ------------ | --------- | --------------- | --------------- | --------------------- |
+| **现在**     | do / does | am/is/are doing | have/has done   | have/has been doing   |
+| **过去**     | did       | was/were doing  | had done        | had been doing        |
+| **将来**     | will do   | will be doing   | will have done  | will have been doing  |
+| **过去将来** | would do  | would be doing  | would have done | would have been doing |
+
+一般常用的只有八种。
+
 ## 2021年12月（一）
 
 ### 作文
@@ -398,3 +482,105 @@
 >
 >
 >
+
+## 2022年6月
+
+### 翻译
+
+![image-20250523141118480](./六级.assets/image-20250523141118480.png)
+
+~~~
+	The Nanjing Yangtze River Bridge is the first railway and highway bridge on Yangtze River designed by China and constructed with domestic materials.The upper four-lane highway bridge is 4,589 meters long, and the lower double-track railway bridge is 6,772 meters long.The railhway bridge connects the original two railways line, Tianjin - Pukou and Shanghai - Nanjing,it reducing the time for trains to cross the river from one and a half hours in the past to two minutes now.The bridge is an important hub for south and north transportation and also one of the scenic spots in Nanjing.
+	The completion of the Nanjing Yangtze River Bridge marks a leap in China's bridge construction,greatly facilitating the exchange of materials and the movement of people between the two banks of the Yangtz River, and playing a significant role in promoting economic development and improving people's lives.
+~~~
+
+>domestic 国产的
+>
+>constructed with 由...制造
+>
+>material 材料
+>
+>hub 枢纽
+>
+>transportation 交通
+>
+>scenic spots 景点
+>
+>marks 标志着
+>
+>symbolizes 象征
+>
+>leap 飞跃
+>
+>facilitating 使方便
+
+### 阅读
+
+>detrimental 有害的
+>
+>implication 影响
+>
+>conducive to 有益于
+>
+>indispensable 不可或缺的
+>
+>composition 作品，成分构成
+>
+>depreciate 贬值，降低
+>
+>deplete 大量减少
+>
+>precious 珍贵的
+>
+>constraint 限制，束缚，拘束，局限
+>
+>consult 咨询
+>
+>discipline 纪律，训练，科目
+>
+>prevent 证实
+>
+>unintentional 无意识的，非故意的
+>
+>specialty 专业
+>
+>incorporate 包含，合并
+>
+>absurd 荒谬的，愚蠢的
+>
+>claimed 宣传的，生称
+>
+>baffling 令人困惑的，阻碍
+>
+>principles 原理，原则
+>
+>colleague 同僚，同事
+>
+>angles 角度
+>
+>craves 渴望
+>
+>imperative 极其重要的，必要的
+>
+>automatically 自然的，无意识的
+>
+>appropriate 合适的，相称的
+>
+>credential 资格，资格证书
+>
+>analogy 类比，类似
+>
+>track of 跟踪，记录
+>
+>intricate 错综复杂的
+>
+>duly 适当的
+>
+>rigorous 严密的，严格的
+>
+>eliminate 淘汰，剔除
+>
+>jargon 行话，术语
+
+
+
