--- a/files/六级.md
+++ b/files/六级.md
@@ -10,8 +10,6 @@
 	Recently with the development of science and techonlogy,the phenomenon that___has aroused wide concern.
 ~~~
 
-
-
 >rather than 而不是
 >
 >a growing number of = an increasing number of = more and more 越来越多
@@ -136,6 +134,44 @@
 	Only when young people truly realize that knowing how to learn is more important than learning itself can they gain long-term benefits in both work and life. As a college student, I am convinced that it is of great necessity for students to attach importance to learning how to learn.
 ~~~
 
+## 六级作文
+
+### 意义措施类
+
+首段：话题引入 + 主题阐述
+		**In a rapidly developing society,It is generally accepted that ____ plays a fundamental role in <u>personal progress and national development</u>. ____,which exerts a great impact on our life, has captured a great deal of public attention.** 
+
+中间段：背景句 + 论据 + 论点
+		**There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff) ,（社会竞争层面）/ In an age where globalization and information technology revolution are developing(advancing) rapidly ,（科技发展层面）/ In an age where people’s standard of living has been raised significantly,（经济发展层面）/ In an age where parents and educators always focus on sth,（教育层面）/ In an age where sth have（not）been highly advocated in mass media（媒体层面），an increasing number of people find it helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to meet the ever-growing demands of our society.On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is  [me / one of my friends / a famous figure].\[ I / He / She\][简述具体经历，体现主题], which strongly proves the importance of [主题名词] in real life.**
+
+
+
+> overcome difficulties and challenges 克服困难和挑战
+>
+> achieve success 取得成功
+>
+> accumulate knowledge 增长知识 broaden our horizons 开拓视野 expand social circle 扩大社交圈
+>
+> enrich our minds(lives) 丰富我们的思想（生活）
+>
+> protect our living environment and conserve energy 保护环境，节约能源
+>
+> promote social harmony 增进社会和谐
+>
+> preserve and carry forward traditional Chinese culture 保护和发扬中国传统文化
+
+
+
+
+
+### 观点选择类
+
+### 现象解释类
+
+### 谚语警告类
+
+### 图画类
+
 ## 六级翻译
 
 ### 修饰后置
@@ -219,6 +255,31 @@
 | **过去将来** | would do  | would be doing  | would have done | would have been doing |
 
 一般常用的只有八种。
+
+>✅一般现在时（do / does），表示**经常发生的动作**或**客观事实**
+>🔹 He **goes** to school every day.
+>🔹 The sun **rises** in the east.
+>
+>一般过去时（did），表示**过去某个时间发生的事情**
+>🔹 I **visited** Beijing last year.
+>
+>一般将来时（will do），表示**将来要发生的动作**
+>🔹 I **will study** tomorrow.
+>
+>现在进行时（am/is/are doing），表示正在发生的动作
+> 🔹 She **is reading** a book now.
+>
+>过去进行时（was/were doing），表示过去某一时刻正在进行的动作
+>🔹 At 8 pm yesterday, I **was watching** TV.
+>
+>将来进行时（will be doing），表示**将来某一时刻正在进行的动作**
+>🔹 This time tomorrow, I **will be flying** to Paris.
+>
+>✅现在完成时（have/has done），表示**已经完成，结果影响现在**
+>🔹I **have finished** my homework.
+>
+>过去完成时（had done），表示**过去的过去**
+>🔹 When I arrived, he **had left**.
 
 ## 2021年12月（一）
 
