--- a/files/六级.md
+++ b/files/六级.md
@@ -10,90 +10,6 @@
 	Recently with the development of science and techonlogy,the phenomenon that___has aroused wide concern.
 ~~~
 
->rather than 而不是
->
->a growing number of = an increasing number of = more and more 越来越多
->
->place importance on sth. = attach importance to sth. = give priority to sth. = put too much emphasis on = to place sufficient emphasis on 关注/重视某事
->
->because of = due to = as a result of 由于
->
->lead to = cause = bring out 引起、导致
->
->chasing 追求
->
->gradually逐渐
->
->as ... as 和...一样
->place as much importance on A as on B 重视A也重视B
->
->Living in an era of social media and visual culture 生活在社交媒体和视觉文化的时代
->Living in an era of intense academic and social pressure 生活在学业和社会压力巨大的时代
->Living in an era of diversity and open communication 生活在多元化和开放交流的时代
->Living in an era of information explosion 生活在信息爆炸的时代
->Living in an era of fast-paced life 生活在快节奏的时代
->Living in an era of rapid economic development 生活在经济快速发展的时代
->
->work and study 工作学习
->
->excedding = too much 过度
->
->ample = enough/adequate/sufficient
->
->obstacle 障碍
->
->realize 意识到
->
->Effective Ways 有效途径
->
->hamper = hinder/impair 阻碍
->
->bear in mind = keep in mind = remember = not forget 牢记
->
->negative influences/hazards/demerits
->消极影响/危害/缺点
->
->postive effects/advantages/merits
->积极影响/优势/优点
->
->as a matter of affact 事实上
->
->a vast majority of people 大部分人
->
->ordinary individuals 普通人
->
->significant importance 很重要的
->
->conquer/overcome 克服
->
->developing concrete skills 培养实用技能
->
->enhancing their personal capabilities 提高个人能力
->
->inner qualities and personal abilities 内在品质和个人能力
->
->be able to 能够做某事
->
->a valuable personal trait 宝贵的个人品质
->
->a sign of strong interpersonal competence 人际交往能力的标志
->
->foster/cultivate/develop 培养
->
->participate 参加
->
->master 掌握
->
->the ability to ...的能力
->
->so as to gain...从而获得
->
->avoid 避免
->
->unable to/inability to 不能
->
->pay attention to the improvement of one's own abilities 注重自身能力的提高
-
 *For this part,you are allowed 30 minutes to write an essay than begins with the sentence "People are now increasingly aware of the danger of 'appearance anxiety' or being obsessed with one's looks." You can make comments,cite examples or use your personal experiences to develop your essay.You should write at least 150 words but not more than 200 words.*
 
 ~~~
@@ -138,13 +54,15 @@
 
 ### 意义措施类
 
-首段：话题引入 + 主题阐述
-		**In a rapidly developing society,It is generally accepted that ____ plays a fundamental role in <u>personal progress and national development</u>. ____,which exerts a great impact on our life, has captured a great deal of public attention.** 
+==首段：话题引入 + 主题阐述==
+	**In a rapidly developing society,It is generally accepted that <u>innovation</u> plays a fundamental role <u>in personal progress and national development</u>. <u>Innovation</u>,which exerts a great impact on our life, has captured a great deal of public attention.** 
 
-中间段：背景句 + 论据 + 论点
-		**There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff) ,（社会竞争层面）/ In an age where globalization and information technology revolution are developing(advancing) rapidly ,（科技发展层面）/ In an age where people’s standard of living has been raised significantly,（经济发展层面）/ In an age where parents and educators always focus on sth,（教育层面）/ In an age where sth have（not）been highly advocated in mass media（媒体层面），an increasing number of people find it helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to meet the ever-growing demands of our society.On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is  [me / one of my friends / a famous figure].\[ I / He / She\][简述具体经历，体现主题], which strongly proves the importance of [主题名词] in real life.**
+==中间段：背景句 + 论据 + 论点==
+	**There are two fundamental factors contributing to this phenomenon. On the one hand,in a society where competition in job markets becomes increasingly fierce(stiff) ,（社会竞争层面）/ In an age where globalization and information technology revolution are developing(advancing) rapidly ,（科技发展层面）/ In an age where people’s standard of living has been raised significantly,（经济发展层面）/ In an age where parents and educators always focus on sth,（教育层面）/ In an age where sth have（not）been highly advocated in mass media（媒体层面），an increasing number of people find it helpful/difficult/harmful <u>to enhance our competitiveness</u>.（竞争力）Thus <u>continuous self innovation</u> is a wise choice to meet the ever-growing demands of our society.On the other hand, people with <u>the spirit of innovation</u> can not only <u>accumulate various knowledge</u>,but also** **<u>promote social science and technology innovation</u>.（not only...but also...写一大一小两方面作用）.A typical example is Einstein,honored for his success in the theory of relativism,is always remembered for the spirit of innovation,which makes him one of the greatest scientists./ Apple,honored for its success in mobile phone and personal computer,is always remembered for its collaboration with Google in software,which makes them the most competitive technology company in the world. / Confucius,honored for his success in education and philosophy in ancient times,is always remembered for showing a great respect to others,which makes him the most famous educator and philosopher.**
 
+==结尾段：总结 + 措施==
 
+​	**To sum up/Based on the reasons above, it is of great benefit for us to <u>cultivate innovative</u> spirit during college and <u>learn how to create some new inventions.</u> Only when____[younster/young people/humans]truly realize the value of____,can they gain long-term benefits both mentally and practically. Meanwhile,the school should also join in the efforts in promoting quality-oriented education**
 
 > overcome difficulties and challenges 克服困难和挑战
 >
@@ -159,18 +77,133 @@
 > promote social harmony 增进社会和谐
 >
 > preserve and carry forward traditional Chinese culture 保护和发扬中国传统文化
-
-
-
-
+>
+> pay attention to the improvement of one's own abilities 注重自身能力的提高
+>
+> rather than 而不是
+>
+> a growing number of = an increasing number of = more and more 越来越多
+>
+> place importance on sth. = attach importance to sth. = give priority to sth. = put too much emphasis on = to place sufficient emphasis on 关注/重视某事
+>
+> because of = due to = as a result of 由于
+>
+> lead to = cause = bring out 引起、导致
+>
+> chasing 追求
+>
+> gradually逐渐
+>
+> as ... as 和...一样
+> place as much importance on A as on B 重视A也重视B
+>
+> Living in an era of social media and visual culture 生活在社交媒体和视觉文化的时代
+> Living in an era of intense academic and social pressure 生活在学业和社会压力巨大的时代
+> Living in an era of diversity and open communication 生活在多元化和开放交流的时代
+> Living in an era of information explosion 生活在信息爆炸的时代
+> Living in an era of fast-paced life 生活在快节奏的时代
+> Living in an era of rapid economic development 生活在经济快速发展的时代
+>
+> work and study 工作学习
+>
+> excedding = too much 过度
+>
+> ample = enough/adequate/sufficient
+>
+> obstacle 障碍
+>
+> realize 意识到
+>
+> Effective Ways 有效途径
+>
+> hamper = hinder/impair 阻碍
+>
+> bear in mind = keep in mind = remember = not forget 牢记
+>
+> negative influences/hazards/demerits
+> 消极影响/危害/缺点
+>
+> postive effects/advantages/merits
+> 积极影响/优势/优点
+>
+> as a matter of affact 事实上
+>
+> a vast majority of people 大部分人
+>
+> ordinary individuals 普通人
+>
+> significant importance 很重要的
+>
+> conquer/overcome 克服
+>
+> developing concrete skills 培养实用技能
+>
+> enhancing their personal capabilities 提高个人能力
+>
+> inner qualities and personal abilities 内在品质和个人能力
+>
+> be able to 能够做某事
+>
+> a valuable personal trait 宝贵的个人品质
+>
+> a sign of strong interpersonal competence 人际交往能力的标志
+>
+> foster/cultivate/develop 培养
+>
+> participate 参加
+>
+> master 掌握
+>
+> the ability to ...的能力
+>
+> so as to gain...从而获得
+>
+> avoid 避免
+>
+> unable to/inability to 不能
+>
 
 ### 观点选择类
 
+==首段：话题引入 + 主题阐述==
+
+​	**In modern society,it is generally accepted that <u>higher education</u> plays a fundamental role in <u>personal progress and national development</u>. Opinions vary greatly when it comes to <u>whether one should choose science or humanities at college</u>.If I were you,I would like to <u>take science as my major</u>.**
+
+==中间段：过渡句 + 一方面 + 另一方面==
+
+​	**There are two fundamental factors contributing to my preference. On the one hand, in a society where <u>competition in job markets becomes increasingly fierce</u>, an increasing number of <u>teenagers</u> find it helpful that <u>learning science can obtain a decent job</u>. Thus <u>majoring scientic knowledge</u> is a wise choice to meet the ever-growing demands of our society. On the other hand, <u>science</u> not only <u>can improve ourselves to meet the ever-growing demands of our society</u>,but also <u>can push the whole human race forward</u>.If it were not for <u>the science and technology</u>,our daily life today would not be so convenient and colorful.**
+
+==结尾段：总结 + 措施==
+
+​	**To sum up, it is of great benefit for our college students to <u>choose siience as our major in university</u> and <u>learn actively more innovative knowledge in technology and science.</u> Specifically,The fundamental way in which the government and school advocate students from different backgrounds is to <u>study science</u>.**
+
 ### 现象解释类
+
+==首段：话题引入 + 主题阐述==
+
+​	**In a rapidly developing society, There is little doubt that the development of <u>technology</u> plays an increasingly important role in our life. Robots,which is held by many to be controversial,will capture a great deal of public attention <u>if robots replace human beings in the future.</u>**
+
+==中间段：过渡句 + 一方面 + 另一方面==
+
+​	**As regards to the social implication of robots,my discussion on the issue is mainly twofold.On the one hand, in an age where globalization and information technology revolution are developing(advancing) rapidly, an increasing number of people find it increasingly difficult to find a proper job for them.Thus changing traditional way of thinking in work is not a choice,but a must to meet the ever-growing demands of our society. On the other hand,High-skilled working abilities not only can give people an opportunity to increase your income,but also will not be replaced by robots.If people always work with traditional thinking, they will be replaced by robots.**
+
+==结尾段：总结 + 措施==
+
+​	**To sum up, it is of great benefit for us to cultivate innovative thinking when we work and learn how to learn knowledge in high-skilled jobs.Specifically,The fundamental way is that the government advocates sensible use of robots balance the relationship between human beings and robots.Meanwhile,the school should also join in the efforts in studying innovative knowledge.**
 
 ### 谚语警告类
 
-### 图画类
+==首段：话题引入 + 主题阐述==
+
+​	**In modern society, There is little doubt that the respect plays an increasingly important role in interpersonal relationship.Just as the saying goes, “Respect others, and you will be respected”,which exerts a positive influence on daily communication.**
+
+==中间段：过渡句 + 一方面 + 另一方面==
+
+​	**There are two fundamental factors cited to account for this saying.On the one hand, In an age where people’s standard of living has been raised significantly, an increasing number of people find it helpful to bring people closer. Thus respecting others is not a choice,but a must to satisfy the need of people‘s self-esteem.On the other hand, Being respected not only plays an indispensable role in gaining respect from others but also contributes to the construction of a harmonious society.For instance,Confucius,honored for his success in education and philosophy in ancient times,is always remembered for showing a great respect to others,which makes him the most famous educator and philosopher.**
+
+==结尾段：总结 + 措施==
+
+​	**To sum up,it is of great benefit for us to cultivate equal thinking and learn how to repsect others.Specifically,The fundamental way is that the government advocates a wholesome atmosphere to publicize the importance of mutual respect.Meanwhile,the school should also join in the efforts in promoting quality-oriented education.**
 
 ## 六级翻译
 
@@ -544,7 +577,7 @@
 >
 >
 
-## 2022年6月
+## 2022年6月（一）
 
 ### 翻译
 
